@@ -1,3 +1,8 @@
+Thu May 12 01:54:08 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (try_func): get rid of conflict of declarations of
+	  main().  checking local symbol reference does not make sense.
+
 Thu May 12 00:18:19 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub (HAVE_QSORT_S): use qsort_s only for Visual Studio
